switching to flat output

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <title>Bootstrap4</title>
 </head>
 <body>
-Hello
+<div>Hello</div>
 <img src="./img/logo.png" alt="">
+<i class="fa fa-address-book" aria-hidden="true"></i>
 
 
 </body>
